Minor change in appsettings.json

--- a/FurEver/appsettings.json
+++ b/FurEver/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:fureverdbserver.database.windows.net,1433;Initial Catalog=FurEver_db;User Id=fureverAdmin@fureverdbserver;Password=furever@123"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FurEver-b2622e18-b969-4c49-9166-6e5a24266996;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
